--- a/TASK-4-Keefer Law Firm/style.css
+++ b/TASK-4-Keefer Law Firm/style.css
@@ -1,261 +1,120 @@
-* { margin: 0;padding: 0;box-sizing: border-box;}
+* {             margin: 0;padding: 0;box-sizing: border-box;}
 
-body {background-color: #e8e8e8;font-family: Arial,  sans-serif;}
-
-/* Header Section */
-.top-header {background: linear-gradient(to bottom, #e8e8e8 0%, #f5f5f5 100%);padding: 20px 60px;display: flex;
-  justify-content: space-between;align-items: center;border-bottom: 4px solid #8B0000;}
-.logo img {height: 90px; width: auto;}
+body {          background-color: #e8e8e8;font-family: Arial,  sans-serif;}
+/*Header */
+.top-header {   background: linear-gradient(to bottom, #e8e8e8 0%, #f5f5f5 100%);padding: 20px 60px;display: flex;
+                justify-content: space-between;align-items: center;border-bottom: 4px solid #8B0000;}
+.logo img {     height: 90px; width: auto;}
 .contact-info { text-align: left;}
 .contact-info h3 { color: #8B0000;font-size: 15px;font-weight: bold;letter-spacing: 4px;margin-bottom: 3px;}
 .contact-info h1 { color: #000;font-size: 48px;font-weight: bold;margin-bottom: 5px;letter-spacing: 1px;}
 .contact-info p  { color: #333;font-size: 15px;font-weight: bold;letter-spacing: 2px;}
 
 /* Navigation */
-.navbar { background: linear-gradient(to bottom, #8B0000 0%, #5c0000 100%);display: flex;
-          justify-content: right;padding: 0;box-shadow: 0 2px 5px rgba(0,0,0,0.2);}
+.navbar {   background: linear-gradient(to bottom, #8B0000 0%, #5c0000 100%);display: flex;
+            justify-content: right;padding: 0;box-shadow: 0 2px 5px rgba(0,0,0,0.2);}
 .navbar a { color: white;text-decoration: none;padding: 18px 30px ;font-size: 13px;font-weight: bold;
             letter-spacing: 2px;border-right: 1px solid rgba(255,255,255,0.1);}
 .navbar a.active { background: #5a5858;}
-.navbar a:hover  {  background: #5c0000;}
+.navbar a:hover  { background: #5c0000;}
 
 /* Hero Section */
 .hero-section {display: flex;padding: 30px 60px;gap: 25px;background: white;}
-.hero-left { flex: 1;}
+.hero-left {   flex: 1;}
 .hero-banner { width: 100%; height: auto;box-shadow: 0 4px 10px rgba(0,0,0,0.2);border-radius: 5px;}
-.hero-right { width: 510px;;position: relative;padding: 0;}
+.hero-right {  width: 510px;;position: relative;padding: 0;}
 .form-background { width: 100%;height: auto;border-radius: 5px;box-shadow: 0 4px 10px rgba(102, 100, 100, 0.2);}
-.form-content { position: absolute;top: 0;left: 0;right: 0;padding: 40px;}
+.form-content {    position: absolute;top: 0;left: 0;right: 0;padding: 40px;}
 .form-content h2 { background: #ad2222;color: white;padding: 10px 20px;font-size: 22px;letter-spacing: 2px;
                    margin: -40px 280px 10px -40px;border-radius: 5px 5px 0 0;}
-.form-content h3 {position: absolute;font-size: 26px; color: #000;top: 10px;line-height: 1.2;margin-left: 230px;}
-.blue-text {color: #0066CC;}
-.form-content p { font-size: 13px;color: #333;margin: 20px 0 10px 0;line-height: 1.5;}
-.form-group {display: flex; margin-bottom: 10px;align-items: center;}
+.form-content h3 { position: absolute;font-size: 26px; color: #000;top: 10px;line-height: 1.2;margin-left: 230px;}
+.blue-text {       color: #0066CC;}
+.form-content p {  font-size: 13px;color: #333;margin: 20px 0 10px 0;line-height: 1.5;}
+.form-group {      display: flex; margin-bottom: 10px;align-items: center;}
 .form-group label { font-weight: bold;margin-right: 8px;font-size: 12px;color: #000;text-align: right;width: 70px;}
 .form-group input,
 .form-group textarea { width: 40%;padding: 6px;border: 1px solid #ccc;font-size: 13px;font-family: Arial, sans-serif;}
 .form-group textarea { height: 60px;resize: none;width: 500px;}
-.confidential-stamp { position: absolute;top: 150px;right: 50px;}
+.confidential-stamp  { position: absolute;top: 150px;right: 50px;}
 .confidential-stamp img {width: 150px; transform: rotate(15deg);}
-.privacy-text p { font-size: 15px;font-style: italic;color: #1c1b1b;margin-bottom: 70px;}
-.hero-right .btn-red  {color: white;border:none;cursor:pointer;background-color:  #7a0c0c;;
-          width:45%;text-align:right; margin-left: 250px; font-size: 13px;}
-.btn-red:hover { background: #5c0000;}
-
+.privacy-text p {        font-size: 15px;font-style: italic;color: #1c1b1b;margin-bottom: 70px;}
+.hero-right .btn-red  {  color: white;border:none;cursor:pointer;background-color:  #7a0c0c;;
+                         width:45%;text-align:right; margin-left: 250px; font-size: 13px;}
+.btn-red:hover {         background: #5c0000;}
 /* Info Boxes */
-.info-section { display: flex;gap: 20px;padding: 0 0;background-color: white;border: 0px solid  white;}
-.dui-box .bullet-white{
-  width: 10px;
-  height: 10px;
-}
-/* BOX 1:  */ 
-.info-box.dui-box {
-  width: 30%;
-  background-color: #f9f9f9;
-  padding: 20px;
-  border-radius: 5px;
-  text-align: center;
-}
-
-.dui-box .red-title {
-  color: #1a1818;
-  font-size: 24px;
-  margin-bottom: 5px;
-  text-transform: uppercase;
-}
-
-.dui-box .red-subtitle {
-  color: #8B0000;
-  font-size: 15px;
-  margin-bottom: 10px;
-  letter-spacing: 1px;
-  margin-right: 40px;
-}
-
-.dui-box .info-icon {
-  position: absolute;
-  width: 70px;
-  margin: 10px 0;
-  margin-left: 100px;
-}
-
-.dui-box p {
-  color: black;
-  font-size: 13px;
-  line-height: 1.3;
-  text-align: left;
-  margin-left: 50px;
-  padding: 8px;
-}
-
-.dui-box .btn-red {
-  background: #8B0000;
-  color: white;
-  font-size: 10px;
-  width: 130px;
-  margin-left: 150px;
-  text-align: center;
-}
-
-.dui-box .btn-red:hover {
-  background: #5c0000;
-}
-
-/* BOX 2:  */
-.info-box.law-box {
-  width: 30%;
-  background-color: white;
-  padding: 20px;
-  border-radius: 8px;
-  text-align: center;
-}
-
-.law-box .red-title {
-  color: #8B0000;
-  font-size: 20px;
-  margin-bottom: 8px;
-  text-transform: uppercase;
-  margin-right: 180px;
-}
-
-.law-box p {
-  color: black;
-  font-size: 14px;
-  line-height: 1.3;
-  text-align: left;
-  margin-left: 30px;
-}
-
-.law-box .info-icon {
-  position: absolute;
-  width: 130px;
-  margin: 3px auto;
-  margin-left: 110px;
-  margin-top: -80px;
-}
-
-.law-box .btn-red {
-  background: #8B0000;
-  color: white;
-  font-size: 10px;
-  width: 130px;
-  margin-left: -40px;
-  text-align: center;
-  padding: 10px;     
-}
-.law-box .btn-red:hover {
-  background: #5c0000;
-}
-
-/* BOX 3:  */
-.info-box.cert-box {
-  width: 30%;
-  background-color: white;
-  padding: 20px;
-  border-radius: 8px;
-  text-align: center;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-}
-
-.cert-box .red-title {
-  color: #8B0000;
-  font-size: 18px;
-  margin-top: 8px;
-  margin-bottom: 5px;
-  text-align: left;
-  margin-left: 10px;
-}
-
-.cert-box p {
-  color: black;
-  font-size: 13px;
-  margin-bottom: 10px;
-  line-height: 1.4;
-  text-align: left;
-  margin-left: 10px;
-}
-
-.cert-box .avvo-badge {
-  width: 100px;
-  margin: 10px -80px;
-}
-
-.cert-box .credential-badge {
-  width: 100px;
-  margin-left: 90px;
-}
-.cert-box .btn-red {
-  background: #8B0000;
-  color: white;
-  font-size: 10px;
-  width: 130px;
-  margin-left: 30px;
-  text-align: center;
-  padding: 10px;     
-}
-.cert-box .btn-red:hover {
-  background: #5c0000;}
-  
+.info-section {display: flex;justify-content: space-between;align-items: flex-start;gap: 0;position: relative;
+               padding-bottom: 30px;background: #fff;}
+/*  BOX 1*/ 
+.dui-box .bullet-white{  width: 10px;height: 10px;}
+.info-box.dui-box {      width: 30%;background-color: #f9f9f9;padding: 20px;border-radius: 5px;text-align: center;border-right: 1px solid #ccc;}
+.dui-box .red-title {    color: #1a1818;font-size: 24px;margin-bottom: 5px;text-transform: uppercase;}
+.dui-box .red-subtitle { color: #8B0000;font-size: 15px;margin-bottom: 10px;letter-spacing: 1px;margin-right: 40px;}
+.dui-box .info-icon {    position: absolute;width: 70px;margin: 10px 0;margin-left: 100px;}
+.info-box.dui-box .shadow-line{ margin-top: auto;left: 150px;position: absolute;height: 3px;width: 200px;}
+.dui-box p { color: black;font-size: 13px;line-height: 1.3;text-align: left;margin-left: 50px;padding: 8px;}
+.dui-box .btn-red {    background: #8B0000;color: white;font-size: 14px;width: 125px;margin-left: 150px;
+                       margin-top: auto;text-align: center;padding: 8px;}
+.dui-box.btn-red:hover{background: #5c0000;}
+/*BOX 2*/
+.law-box.bullet-white{ width: 10px;height: 10px;}
+.info-box.law-box {    width: 33%;background-color: white;padding: 20px;border-radius: 8px;text-align: center;border-right: 1px solid #ccc;}
+.info-box.law-box .shadow-line{  margin-top: 8px;right: 550px;position: absolute;height: 2px;width: 230px;}
+.law-box .red-title { color: #8B0000;font-size: 20px;margin-bottom: 8px;text-transform: uppercase;margin-right: 180px;}
+.law-box p { color: black;font-size: 14px;line-height: 1.3;text-align: left;margin-left: 30px;}
+.law-box .info-icon { position: absolute;width: 130px;margin: 3px auto;margin-left: 110px;margin-top: -80px;}
+.law-box .btn-red {   background: #8B0000;color: white;font-size: 14px;width: 125px;margin-left: -40px;
+                      text-align: center;padding: 8px;    margin-top: 8px; }
+.law-box.btn-red:hover{background: #5c0000;}
+/*BOX 3*/
+.cert-box .bullet-white{ width: 10px;height: 10px;}
+.info-box.cert-box {     width: 30%;background-color: white;padding: 20px;border-radius: 8px;text-align: center;}
+.cert-box .red-title {   color: #8B0000;font-size: 18px;margin-top: 8px;margin-bottom: 5px;text-align: left;margin-left: 10px;}
+.cert-box p { color: black;font-size: 13px;margin-bottom: 10px;line-height: 1.4;text-align: left;margin-left: 10px;}
+.cert-box .avvo-badge { width: 100px;margin: 10px -80px;}
+.cert-box .credential-badge {width: 100px; margin-left: 90px;}
+.info-box.cert-box .shadow-line{ margin-top: auto;right: 100px;position: absolute;height: 2px;width: 200px; }
+.cert-box .btn-red { background: #8B0000;color: white;font-size: 14px;width: 125px;margin-left: 30px;
+                     text-align: center;padding: 8px;    margin: auto; }
+.cert-box .btn-red:hover {background: #5c0000;}
+.shadow-2 {display: block;width: 100%;height: 10px; margin-top: 10px;}
 /* Main Content */
-.main-content { display: flex;padding: 40px 60px;gap: 30px;background: white;}
-
+.main-content { display: flex;padding: 40px 60px;gap: 30px;background: white}
 /* Left Sidebar */
-.sidebar-left { width: 220px; font-family: Arial, sans-serif;}
+.sidebar-left {    width: 220px;font-family: Arial, sans-serif;}
 .sidebar-left h2 { font-size: 20px;font-weight: bold;color: #333;margin-bottom: 15px;}
-.sidebar-left h2 span,
-.sidebar-left h2 strong,
-.sidebar-left h2 b {color: #8B0000; /* Red color for AREAS or MORE */}
-
-/* Each Practice Box */
-.practice-item {background: #999; /* gray background */border-left: 10px solid #8B0000; /* dark red strip on left */
-  padding: 12px 15px;margin-bottom: 8px;border-radius: 3px;box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);color: white;
-  display: flex;flex-direction: column;justify-content: center;}
-
-/* Item Text */
-.practice-item span {font-weight: bold;font-size: 14px;display: block;margin-bottom: 5px;}
-/* More + Bullet */
-.practice-item h5 {font-size: 12px;font-weight: bold;color: white;display: flex;align-items: center;justify-content: flex-end; 
-  gap: 3px;margin: 0;}
-.practice-item .bullet-red {width: 10px;height: 10px;}
-
-/*Learn More About Heading */
-.sidebar-left h2:last-of-type {font-size: 20px;margin-top: 20px;}
+.sidebar-left h2 span,.sidebar-left h2 strong,.sidebar-left h2 b {color: #8B0000; }
+/*Each Practice Box */
+.practice-item { background: #999;border-left: 10px solid #8B0000; box-shadow: 0 4px 6px rgba(10, 9, 9, 0.2);padding: 15px 15px;
+  margin-bottom: 8px;border-radius: 3px;box-shadow: 0 5px 1px rgba(0, 0, 0, 0.2);color: white;
+  display: flex;flex-direction: column;justify-content: space-between;}
+.practice-item span { font-weight: bold;font-size: 16px;display: block;margin-bottom: 10px;}
+.practice-item h5 { font-size: 12px;font-weight: bold;color: white;display: flex;align-items: center;
+                    justify-content: flex-end; gap: 3px;margin: 0;}
+.practice-item .bullet-red { width: 10px;height: 10px;}
+/* About Heading  */
+.sidebar-left h2:last-of-type {     font-size: 20px;margin-top: 20px;}
 .sidebar-left h2:last-of-type span {color: #8B0000;font-weight: bold;}
-
 /* menu area */
-.menu-area { background: white;padding: 50px 20px;text-align: center;color: #ccc;margin-top: 20px;}
-.menu-area h3 { font-size: 26px;margin: 10px 0;letter-spacing: 1px;}
-
+.menu-area {   background: white;padding:50px 20px;text-align: center;color: #ccc;margin-top: 20px;}
+.menu-area h3{ font-size: 26px;margin: 10px 0;letter-spacing: 1px;}
 /* Center Content */
-.content-center { flex: 1;padding: 30px;}
-.content-center h1 { color: #666;font-size: 32px;margin-bottom: 15px;text-transform: uppercase;letter-spacing: 1px;}
-.content-center p { color: #666;font-size: 13px;line-height: 1.7;text-align: left;}
-
+.content-center{    flex: 1;padding: 30px;}
+.content-center h1{ color: #666;font-size: 32px;margin-bottom: 15px;text-transform: uppercase;letter-spacing: 1px;}
+.content-center p{  color: #666;font-size: 13px;line-height: 1.7;text-align: left;}
 /* Right Sidebar */
-.sidebar-right { width: 230px;}
-.widget { background: white;padding: 20px 10px;margin-bottom: 10px;border: 0px solid #e0e0e0;}
-.btn-red {
-  background: #8B0000;
-  color: white;
-  padding: 8px 15px;
-  display: inline-block;
-  text-decoration: none;
-  font-size: 10px;
-  text-align:left;
-  font-weight: bold;
-  margin-top: 10px;
-  width: 120px;
-  margin-left: 70px;}
-.shadow-line{margin-left: 10px;}
-.widget h3 { color: #8B0000;font-size: 18px;font-weight: bold;line-height: 1.2;}
-.widget h4 { color: #8B0000;font-size: 18px;text-align: center;font-weight: bold;line-height: 1.3;}             
-.widget p { color: black;font-size: 13px;line-height: 1.3;}
-.widget.center { text-align: left;}
-.rating-badge { width: 150px;height: auto;margin-left: 50px;display: flex;}
-.member-badge { width: 135px;height: auto;margin-left: 60px;display: flex;}
-.social-icons { display: flex;gap: 15px;justify-content: center;margin-left: 10px;margin-top: 15px;}
-.social-icons a { width: 45px;height: 45px;display: flex;align-items: center;justify-content: center;transition: opacity 0.3s;}
-.social-icons img { width: 100%;height: 100%;}
-.social-icons a:hover { opacity: 0.5;}
-
+.sidebar-right {       width: 230px;}
+.widget {              background: white;padding: 20px 10px;margin-bottom: 10px;border: 0px solid #e0e0e0;}
+.bullet-small{         width: 10px;height: 10px;}
+.btn-red {             background: #8B0000;color: white;padding: 8px 13px;display: inline-block;text-decoration: none;
+                       font-size: 12px;text-align:center;font-weight: bold;margin-top: 10px;width: 120px;margin-left: 70px;}
+.shadow-line{          margin-top: 9px;right: 60px;position: absolute;height: 4px;width: 220px;}
+.widget h3{            color: #8B0000;font-size: 18px;font-weight: bold;line-height: 1.2;}
+.widget h4{            color: #8B0000;font-size: 18px;text-align: center;font-weight: bold;line-height: 1.3;}             
+.widget p{             color: black;font-size: 13px;line-height: 1.3;}
+.widget.center{        text-align: left;}
+.rating-badge{         width: 150px;height: auto;margin-left: 50px;display: flex;}
+.member-badge{         width: 135px;height: auto;margin-left: 60px;display: flex;}
+.social-icons{         display: flex;gap: 15px;justify-content: center;margin-left: 10px;margin-top: 15px;}
+.social-icons a{       width: 45px;height: 45px;display: flex;align-items: center;justify-content: center;transition: opacity 0.3s;}
+.social-icons img{     width: 100%;height: 100%;}
+.social-icons a:hover{ opacity: 0.5;}
