--- a/TASK-4-Keefer Law Firm/style.css
+++ b/TASK-4-Keefer Law Firm/style.css
@@ -1,20 +1,18 @@
 * {             margin: 0;padding: 0;box-sizing: border-box;}
-
-body {          background-color: #e8e8e8;font-family: Arial,  sans-serif;}
+body {          background-color: #e8e8e8;font-family: Arial,  sans-serif; margin: 0;padding: 0;}
 /*Header */
-.top-header {   background: linear-gradient(to bottom, #e8e8e8 0%, #f5f5f5 100%);padding: 20px 60px;display: flex;
-                justify-content: space-between;align-items: center;border-bottom: 4px solid #8B0000;}
-.logo img {     height: 100px; width: 580px;}
+.top-header {   background: linear-gradient(to bottom, #e8e8e8 0%, #f5f5f5 100%);display: flex;
+                justify-content: space-between;align-items: center;}
+.logo img {     height: 120px; width: 700px;}
 .contact-info { text-align: center;}
 .contact-info h2 { color: #8B0000;font-size: 20px;font-weight: bold;letter-spacing: 3px;}
 .contact-info h1 { color: #000;font-size: 47px;font-weight: bold;letter-spacing: 3px;}
-.contact-info p  { color: #333;font-size: 18px;font-weight: bold;letter-spacing: 0.5px;}
+.contact-info p  { color: #333;font-size: 18px;font-weight: bold;letter-spacing: 0.5px; margin-bottom: 10px;}
 
 /* Navigation */
 .navbar {   background: linear-gradient(to bottom, #8B0000 0%, #5c0000 100%);display: flex;
-            justify-content: right;padding: 0;}
-.navbar a { color: white;text-decoration: none;padding: 15px 32px ;font-size: 13px;font-weight: bold;
-            }
+            justify-content: right; border: none; align-items:center;height: 45px; margin: 0; padding: 0;}
+.navbar a{color: white;text-decoration: none;height: 45px;border: none; margin: 0;padding: 12px 32px ;font-size: 13px;font-weight: bold;}
 .navbar a.active { background: #5a5858;}
 .navbar a:hover  { background: #5c0000;}
 
@@ -43,10 +41,9 @@ body {          background-color: #e8e8e8;font-family: Arial,  sans-serif;}
 .btn-red:hover {         background: #5c0000;}
 /* Info Boxes */
 .info-section {display: flex;justify-content: space-between;align-items: flex-start;gap: 0;position: relative;
-               padding-bottom: 30px;background: #fff;}
+               padding-bottom: 20px;background: #fff;}
 /*  BOX 1*/ 
-
-.info-box.dui-box {      width: 35%;background-color: #f9f9f9;padding: 20px;border-radius: 5px;text-align: center;border-right: 1px solid #ccc;}
+.info-box.dui-box {      width: 35%;padding: 20px;text-align: center;border-right: 1px solid #ccc;}
 .dui-box .red-title {    color: #1a1818;font-size: 22px;margin-bottom: 5px;text-transform: uppercase;margin-left: 20px;}
 .dui-box .red-subtitle { color: #8B0000;font-size: 15px;margin-bottom: 10px;margin-right: 20px;}
 .dui-box .info-icon {    position: absolute;width: 80px;margin: 5px 0;margin-left: 90px;}
@@ -55,21 +52,22 @@ body {          background-color: #e8e8e8;font-family: Arial,  sans-serif;}
 .dui-box .btn-red {    background: #8B0000;color: white;font-size: 14px;width: 125px;margin-left: 150px;
                        margin-top: auto;text-align: center;padding: 8px;}
 .dui-box.btn-red:hover{background: #5c0000;}
-.dui-box .bullet-white{  width: 10px;height: 10px;}
+.dui-box .bullet-white{width: 10px;height: 10px;}
 /*BOX 2*/
 .law-box.bullet-white{ width: 10px;height: 10px;}
-.info-box.law-box {    width: 33%;background-color: white;padding: 20px;border-radius: 8px;text-align: center;border-right: 1px solid #ccc;}
-.info-box.law-box .shadow-line{  margin-top: 8px;right: 570px;position: absolute;height: 2px;width: 210px;}
+.info-box.law-box {  width: 35%;padding: 20px;text-align: center;border-right: 1px solid #ccc;}
+.info-box.law-box::after {content: "";position: absolute;bottom: 60%;left: 35%;width: 35%;height: 1px;background: #ccc;}
+.info-box.law-box .shadow-line{  margin-top: 8px;right: 580px;position: absolute;height: 2px;width: 210px;}
 .law-box .red-title { color: #8B0000;font-size: 20px;margin-bottom: 8px;text-transform: uppercase;margin-right: 210px;}
 .law-box .red-title1{color: #8B0000;font-size: 20px;margin-bottom: 8px;text-transform: uppercase;margin-right: 260px;}
-.law-box p { color: black;font-size: 14px;line-height: 1.3;text-align: left;margin-left: 7px;margin-bottom: 10px;}
-.law-box .info-icon { position: absolute;width: 150px;margin-left: 220px;margin-top: -80px;}
-.law-box .btn-red {   background: #8B0000;color: white;font-size: 14px;width: 125px;margin-right: 250px;
+.law-box p { color: black;font-size: 14px;line-height: 1.3;text-align: left;margin-left: 37px;margin-bottom: 0px;}
+.law-box .info-icon { position: absolute;width: 150px;margin-left: 210px;margin-top: -65px;}
+.law-box .btn-red {   background: #8B0000;color: white;font-size: 14px;width: 125px;margin-right: 200px;
                       text-align: center;padding: 8px;margin-top: 8px;margin-bottom: 40px; }
 .law-box.btn-red:hover{background: #5c0000;}
 /*BOX 3*/
 .cert-box .bullet-white{ width: 10px;height: 10px;}
-.info-box.cert-box {     width: 30%;background-color: white;padding: 20px;border-radius: 8px;text-align: center;}
+.info-box.cert-box {     width: 30%;padding: 20px;border-radius: 8px;text-align: center;}
 .cert-box .red-title {   color: #8B0000;font-size: 18px;margin-top: 8px;margin-bottom: 5px;text-align: left;margin-left: 10px;}
 .cert-box p { color: black;font-size: 13px;margin-bottom: 10px;line-height: 1.4;text-align: left;margin-left: 10px;}
 .cert-box .avvo-badge { width: 100px;margin: 10px -80px;}
@@ -85,13 +83,12 @@ body {          background-color: #e8e8e8;font-family: Arial,  sans-serif;}
 .sidebar-left {    width: 250px;font-family: Arial, sans-serif; }
 .sidebar-left h2 { font-size: 20px;font-weight: bold;color: #333;margin-bottom: 10px; margin-top:35px ;}
 .sidebar-left h2 span,.sidebar-left h2 strong,.sidebar-left h2 b {color: #890a0a; }
-/*Each Practice Box */
-.practice-item { background: #999;border-left: 10px solid #8B0000; box-shadow: 0 4px 6px rgba(10, 9, 9, 0.2);padding: 15px 15px;
-                 margin-bottom: 20px;border-radius: 3px;box-shadow: 0 5px 1px rgba(0, 0, 0, 0.2);color: white;
-                 display: flex;flex-direction: column;justify-content: space-between;}
+.practice-item { background: #807e7e;border-left: 10px solid #8B0000;padding: 13px 13px;
+                 margin-bottom: 20px;box-shadow:0 5px 5px 0px rgb(55, 55, 55);color: white;
+                 justify-content: space-between;}
 .practice-item span { font-weight: bold;font-size: 20px;display: block;margin-bottom: 5px;}
-.practice-item h5 { font-size: 14px;font-weight: bold;color: white;display: flex;align-items: center;
-                    justify-content: flex-end; gap: 3px;margin: 0;}
+.practice-item h5 {   font-size: 14px;font-weight: bold;color: white;display: flex;align-items: center;
+                      justify-content: flex-end; gap: 3px;margin: 0;}
 .practice-item .bullet-red { width: 13px;height: 13px;}
 /* About Heading  */
 .sidebar-left h2:last-of-type {     font-size: 20px;margin-top: 40px;}
